[package]
name = "video-streaming"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1"
wtransport = "0.6.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
anyhow = "1.0.100"
axum = "0.7"
http = "1.1"
[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
